# edgecentercloud-git-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: commit_msg.py
tests/unit/: test_commit-msg.py
