[tool.poetry]
name = "edgecentercloud-git-hooks"
version = "0.0.1"
description = ""
authors = ["Artem Pelevin <artem.pelevin@edgecenter.ru>"]
readme = "README.md"
packages = [{include = "edgecentercloud_git_hooks"}]


[tool.poetry.dependencies]
python = "~3.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
