[tool.poetry]
name = "edgecentercloud-git-hooks"
version = "0.0.6"
description = ""
authors = ["Artem Pelevin <artem.pelevin@edgecenter.ru>"]
readme = "README.md"
packages = [
    {include = "hooks"}
]


[tool.poetry.dependencies]
python = "~3.9"


[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
black = "^23.3.0"
pytest = "^7.3.2"


[tool.poetry.scripts]
edgecenter-cloud-conventional-commit = "hooks.commit_msg:validate_commit_message"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
